test/should-fail/jfxc1442sub.fx
/**
 * @subtest
 */

public var pub = 0;
private var priv = 1;
readable var read = 2;
readable private var readpriv = 3;
var myvar = 4;
